# Linuxtips

./: .gitignore  README.md
DescomplicandoKubernetes/day1/: nginx.yml
DescomplicandoKubernetes/day11/: README.md
DescomplicandoKubernetes/day12/: nginx-deployment.yaml  nginx-pod.yaml  nginx-podmonitor.yaml  nginx-prometheusrule.yaml  nginx-servicemonitor.yaml  nginx-svc.yaml
DescomplicandoKubernetes/day2/: pod-emptdir.yml  pod-limit.yml  pod.yml
DescomplicandoKubernetes/day3/: deployment.yml
DescomplicandoKubernetes/day4/: DaemonSet.yml  ReplicaSet.yml  nginx-deployment.yml
DescomplicandoKubernetes/day5/: k8s-install_baremetal.md
DescomplicandoKubernetes/day5/terraform/: README.md  main.tf  resources.tf  variables.tf
DescomplicandoKubernetes/day6/: nginx.yml  pv-nfs.yaml  pv.yaml  pvc.yaml  redis-deployment.yaml  storageclass.yml
DescomplicandoKubernetes/day7/: nginx-deployment.yaml  statefulset-nginx.yaml
DescomplicandoKubernetes/day8/secrets/: certificado.crt  (+7 more)
DescomplicandoKubernetes/day9/: Install-ingress-eks.md  Install-ingress-nginx.md  ingress-2.yaml  kind-ingress.yaml  production_issuer.yaml  staging_issuer.yaml
DescomplicandoKubernetes/day9-10/: app.yaml  auth  giropops-senhas-deployment.yaml  ingress-2.yaml  ingress-4.yaml  ingress-5.yaml  ingress-6-2.yaml  ingress-6.yaml  prometheus-fix.yaml  prometheus-test.yaml
DescomplicandoPromethues/day1/: Vagrantfile
aws/python/: README.md  pyproject.toml
aws/python/dynamodb/: comtrollers.py  controllers.py  main.py
k8s/: giropops.txt
k8s/day1/: nginx.yml
k8s/kind/: cluster.yml
(+9 files in other folders)
